clusters/talos-ottawa/apps/media/app/radarr-4kremux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-4kremux
spec:
  replicas: 0
  selector:
    matchLabels:
      app: radarr-4kremux
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr-4kremux
    spec:
      containers:
      - name: radarr-4kremux
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - name: http
          containerPort: 7878
          protocol: TCP
        volumeMounts:
        - name: movies-volume
          mountPath: /movies
        - name: downloads-sabnzbd-volume
          mountPath: /downloads/sabnzbd
        - name: downloads-qbittorrent-volume
          mountPath: /downloads/qbittorrent
        - name: config-volume
          mountPath: /config
      volumes:
      - name: movies-volume
        persistentVolumeClaim:
          claimName: radarr-4kremux-movies
      - name: downloads-sabnzbd-volume
        persistentVolumeClaim:
          claimName: sabnzbd-media
      - name: downloads-qbittorrent-volume
        persistentVolumeClaim:
          claimName: qbittorrent-downloads
      - name: config-volume
        persistentVolumeClaim:
          claimName: radarr-4kremux-config
