clusters/talos-ottawa/apps/media/app/radarr-4kremux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-4kremux
spec:
  selector:
    app: radarr-4kremux
  ports:
  - name: http
    port: 7878
    protocol: TCP
    targetPort: 7878
  type: ClusterIP
